--- a/widgets/trainingwidget.ui
+++ b/widgets/trainingwidget.ui
@@ -48,19 +48,6 @@
        </widget>
       </item>
       <item>
-       <spacer name="horizontalSpacer">
-        <property name="orientation">
-         <enum>Qt::Horizontal</enum>
-        </property>
-        <property name="sizeHint" stdset="0">
-         <size>
-          <width>150</width>
-          <height>20</height>
-         </size>
-        </property>
-       </spacer>
-      </item>
-      <item>
        <widget class="QWidget" name="widget" native="true">
         <property name="minimumSize">
          <size>
@@ -345,6 +332,19 @@
            </layout>
           </widget>
          </item>
+         <item>
+          <spacer name="horizontalSpacer">
+           <property name="orientation">
+            <enum>Qt::Horizontal</enum>
+           </property>
+           <property name="sizeHint" stdset="0">
+            <size>
+             <width>150</width>
+             <height>20</height>
+            </size>
+           </property>
+          </spacer>
+         </item>
         </layout>
        </widget>
       </item>
@@ -554,13 +554,20 @@ font-weight: bold;
           <widget class="QWidget" name="lossWidget" native="true">
            <property name="minimumSize">
             <size>
-             <width>0</width>
+             <width>550</width>
+             <height>350</height>
+            </size>
+           </property>
+           <property name="maximumSize">
+            <size>
+             <width>850</width>
              <height>350</height>
             </size>
            </property>
            <property name="styleSheet">
-            <string notr="true"/>
+            <string notr="true">border: 2px solid black</string>
            </property>
+           <layout class="QHBoxLayout" name="lossLayout"/>
           </widget>
          </item>
          <item row="0" column="2">
@@ -578,7 +585,7 @@ font-weight: bold;
             </size>
            </property>
            <property name="styleSheet">
-            <string notr="true"/>
+            <string notr="true">border: 2px solid black</string>
            </property>
            <layout class="QVBoxLayout" name="confLayout">
             <property name="spacing">
@@ -601,8 +608,14 @@ font-weight: bold;
          </item>
          <item row="1" column="0">
           <widget class="QWidget" name="convFilterWidget" native="true">
+           <property name="sizePolicy">
+            <sizepolicy hsizetype="Expanding" vsizetype="Preferred">
+             <horstretch>0</horstretch>
+             <verstretch>0</verstretch>
+            </sizepolicy>
+           </property>
            <property name="styleSheet">
-            <string notr="true"/>
+            <string notr="true">border: 2px solid black</string>
            </property>
           </widget>
          </item>
@@ -619,6 +632,9 @@ font-weight: bold;
              <width>16777215</width>
              <height>16777215</height>
             </size>
+           </property>
+           <property name="styleSheet">
+            <string notr="true"/>
            </property>
            <layout class="QVBoxLayout" name="neuralNetworkLayout">
             <property name="leftMargin">
